welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:39: error: ';' expected but 'else' found.
    else{recule(3)}
    ^PatternPicture:48: error: Unmatched closing brace '}' ignored here
}
^